Third version of the learnlatex.org proposal

--- a/learnlatex-org-proposal/learnlatex-org-proposal.tex
+++ b/learnlatex-org-proposal/learnlatex-org-proposal.tex
@@ -19,8 +19,8 @@
 
 % Meta-data
 \author{Joseph Wright\thanks{\email{joseph.wright@morningstar2.co.uk}}}
-\date{January 2020}
-\title{The \url{learn-latex.org} project}
+\date{February 2020}
+\title{The \url{learnlatex.org} project}
 
 \begin{document}
 
@@ -71,8 +71,17 @@ packages.
 
 In addition to the learning resources, there will be a small set of suggestions
 for \enquote{going further}, along with links to finding help. Much of this
-extra material is already availabke elsewhere online via, for example, the
+extra material is already available elsewhere online via, for example, the
 \LaTeX{} team site; but making this new site self-contained is a key aim.
+
+To enable the content to be used as widely as possible, licensing is an
+important consideration. At this stage, a dual license approach seems most
+suitable. For the web pages themselves, the Creative Commons CC-BY-SA 4.0
+license will allow re-use with attribution. For code samples, a more permissive
+license is likely best: the CC0 (roughly equivalent to Public Domain but
+applying in jurisdictions which do no have the PD concept) is suggested. This
+will allow users to simply pick and and use the samples in their own documents
+without any legal concerns.
 
 \section{Design}
 
@@ -86,6 +95,13 @@ Making the site visually attractive and, in all ways, accessible will be an
 important aim as this will help to differentiate it from many other online
 \LaTeX{} resources (many of which are several years old and reflect older
 website practice).
+
+At a technical level, the site will need to be fully-compliant with Web Content
+Accessibility Guidelines (WCAG). These are particularly important to
+visually-impaired users, for whom \LaTeX{} offers significant advantage.
+Created a new site using modern frameworks should make this straight-forward,
+and it will be part of the brief for the web designer contracted to carry out
+the design work.
 
 \section{Online compilation}
 
