TUG2020 article: Add draft on future

--- a/TUG2020-article/learnlatex-TUG-2020.tex
+++ b/TUG2020-article/learnlatex-TUG-2020.tex
@@ -133,7 +133,19 @@ and German in the pipeline.
 
 \section{What's next}
 
-\section{How you can help}
+The web design we are using is very basic: just what comes out-of-the-box with
+GitHub Pages. To help users navigate, we need proper development of a full
+site. That's beyond the expertise of the site team, but we have been able to
+raise funds to employ a professional web developer. He's looking at design both
+in terms of appearance and structure: things like mobile accessibility,
+metadata, etc.\ are all really important.
+
+There's also still more to do on the content, in particular working out if we
+need more formalised exercises or lesson summaries. That likely needs user
+feedback, for which we need \emph{your} help. The site will work best if it's
+promoted to potential users, and readers of \emph{TUGboat} are we hope
+well-placed to recommend it. Of course, to do that, we'd encourage you to read
+the site, give feedback and perhaps even suggest some improvements!
 
 \makesignature
 
