TUG2020 article: Add Japanese comments

--- a/TUG2020-article/learnlatex-TUG-2020.tex
+++ b/TUG2020-article/learnlatex-TUG-2020.tex
@@ -129,6 +129,13 @@ to add a selector, and there's already been interest in translation, so
 we have the site in English, Vietnamese and Portuguese already, with Spanish
 and German in the pipeline.
 
+Linked to translations, we also realised that while most of the lessons stay
+the same for every language, we needed a place where language-specifics could
+be covered. That came up when we were asked about Japanese; they need vertical
+typesetting, which of course is very different from what we need for English.
+So a place for non-translated pages has been added: the content and number of
+pages there is down to the translators.
+
 \section{Online \LaTeX{} compilers}
 
 \section{What's next}
