TUG2020 article: Add DPC to authors

--- a/TUG2020-article/learnlatex-TUG-2020.tex
+++ b/TUG2020-article/learnlatex-TUG-2020.tex
@@ -15,6 +15,9 @@
 % Meta-data for this paper
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{\texttt{learnlatex.org}: Taking \LaTeX{} training fully interactive}
+\author{David Carlisle}
+\address{Oxford, United Kingdom}
+\netaddress{d dot p dot carlisle (at) gmail.com}
 \author{Joseph Wright}
 \address{Northampton, United Kingdom}
 \netaddress{joseph dot wright (at) morningstar2.co.uk}
