TUG2020 article: Add PRMC

--- a/TUG2020-article/learnlatex-TUG-2020.tex
+++ b/TUG2020-article/learnlatex-TUG-2020.tex
@@ -18,6 +18,9 @@
 \author{David Carlisle}
 \address{Oxford, United Kingdom}
 \netaddress{d dot p dot carlisle (at) gmail.com}
+\author{Paulo Roberto Massa Cereda}
+\address{S\~{a}o Paulo, Brazil}
+\netaddress{paulocereda (at) gmail.com}
 \author{Joseph Wright}
 \address{Northampton, United Kingdom}
 \netaddress{joseph dot wright (at) morningstar2.co.uk}
