TUG2020 article: Add an intro paragraph for online section

--- a/TUG2020-article/learnlatex-TUG-2020.tex
+++ b/TUG2020-article/learnlatex-TUG-2020.tex
@@ -144,6 +144,12 @@ pages there is down to the translators.
 
 \section{Online \LaTeX{} compilers}
 
+As outlined above, a key aim in developing the site has been to allow examples
+to be run as close as possible to \enquote{in the page}: that has led us to
+explore a range of options in this area. We wanted to have a full \LaTeX{}
+system available, which mean that systems such as MathJax (\url{mathjax.org})
+or even Mini\LaTeX{} (\url{minilatex.app}) were not suitable.
+
 \subsection{Processing examples \enquote{in the page}}
 
 It is possible to run \TeX{} in the JavaScript engine in the browser and
