TUG2020 article: Fix a URL

--- a/TUG2020-article/learnlatex-TUG-2020.tex
+++ b/TUG2020-article/learnlatex-TUG-2020.tex
@@ -90,7 +90,7 @@ structure and the online element.
 
 The starting point for writing the content was long-standing material developed
 by the Nicola Talbot then used by the UK \TeX{} User Group (\acro{uk-tug}) for
-face-to-face lessons (https://github.com/uktug/latex-beginners-course). After 
+face-to-face lessons (\url{https://github.com/uktug/latex-beginners-course}). After 
 assembling a small group of volunteers, we began by looking at this curriculum,
 the content of other sites and discussions we have all had with new(er) users.
 That lead to a first set of section titles, which we adjusted as new ideas
