TUG2020 article: Fix 'no protocol' links

--- a/TUG2020-article/learnlatex-TUG-2020.tex
+++ b/TUG2020-article/learnlatex-TUG-2020.tex
@@ -42,12 +42,12 @@ For many programming languages there are now web-sites providing the
 opportunity to try coding online using a cloud compiler. These cloud compilers
 can be harnessed by a range of teaching websites to offer a simple introduction
 to the language using a suitable \acro{IDE} (integrated development
-environment): a good example is \url{LearnPython.org}. Such sites tend to be
+environment): a good example is \href{https://LearnPython.org}{\nolinkurl{LearnPython.org}}. Such sites tend to be
 limited in scope as they are not aiming to teach every possible idea in the
 language but only \enquote{Beginners} menu.
 
 Over the past six months, work has been ongoing in filling that gap for
-\LaTeX{}: \url{learnlatex.org}. The aim of this new site is to provide a
+\LaTeX{}: \href{https://learnlatex.org}{\nolinkurl{learnlatex.org}}. The aim of this new site is to provide a
 carefully-curated set of resources for beginner \LaTeX{} authors, with integrated
 use of an online \LaTeX{} environment and demonstrations accessed directly from
 these lessons. The scope of these learning resources is focussed, and with the
@@ -77,11 +77,11 @@ copies or types out the examples by-hand.
 In contrast, learning other programming languages can today often start on
 websites that let them try out the system \emph{in the page}. That means
 no copy-pasting, no need to move to other tabs and no need to download and
-install software. As mentioned above, \url{LearnPython.org} is an excellent
+install software. As mentioned above, \href{https://LearnPython.org}{\nolinkurl{LearnPython.org}} is an excellent
 example, forming part of a family of around half a dozen sites using the
 same overall framework to teach a set of modern languages.
 
-The \url{learnlatex.org} project was started with the aim of combining existing
+The \href{https://learnlatex.org}{\nolinkurl{learnlatex.org}} project was started with the aim of combining existing
 best-practice teaching on \LaTeX{} with a strong focus on interactive, online,
 training. That required tackling three things: the content, the website
 structure and the online element.
@@ -112,7 +112,7 @@ content and means that we are confident the site covers \emph{best practice}.
 
 \section{Website structure}
 
-Based on experience with \url{texfaq.org}, we knew that GitHub Pages, which
+Based on experience with \href{https://texfaq.org}{\nolinkurl{texfaq.org}}, we knew that GitHub Pages, which
 lets you write webpages in Markdown, was a good place to look to host the site.
 This means that multiple authors can easily work with the sources without
 needing to set up complex build system: the pages can be edited on the GitHub
@@ -147,8 +147,8 @@ pages there is down to the translators.
 As outlined above, a key aim in developing the site has been to allow examples
 to be run as close as possible to \enquote{in the page}: that has led us to
 explore a range of options in this area. We wanted to have a full \LaTeX{}
-system available, which mean that systems such as MathJax (\url{mathjax.org})
-or even Mini\LaTeX{} (\url{minilatex.app}) were not suitable.
+system available, which mean that systems such as MathJax (\href{https://mathjax.org}{\nolinkurl{mathjax.org}})
+or even Mini\LaTeX{} (\href{https://minilatex.app}{\nolinkurl{minilatex.app}}) were not suitable.
 
 \subsection{Processing examples \enquote{in the page}}
 
@@ -170,7 +170,7 @@ and
 \href{https://latex.ytotech.com/}{latex-on-http}
 servers. However in
 the end we developed a server
-\url{latexcgi.xyz}
+\href{https://latexcgi.xyz}{\nolinkurl{latexcgi.xyz}}
 specifically tailored to the
 requirements of the site.
 
@@ -195,7 +195,7 @@ the default \enquote{restricted shell escape} mode. This means that packages
  such as \texttt{imakeidx} that make use of the allowed shell commands
 are available.
 
-Currently \url{latexcgi.xyz} is hosted as a virtual machine on
+Currently \href{https://latexcgi.xyz}{\nolinkurl{latexcgi.xyz}} is hosted as a virtual machine on
 Amazon's EC2 service, which is available in the \emph{Free Tier} for one
 year. Long term hosting has yet to be finalized.
 
